<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logoSignUp"
        android:layout_width="153dp"
        android:layout_height="128dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icons8_barter_96"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/emailAddressSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/passwordSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoSignUp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/passwordSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordMatchSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressSignUp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/passwordMatchSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="389dp"
        android:ems="10"
        android:hint="Password Confirmation"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignUp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/signUpButtonSignUp"
        android:layout_width="105dp"
        android:layout_height="56dp"
        android:text="Sign Up"
        app:layout_constraintBottom_toTopOf="@+id/returnButtonSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/returnButtonSignUp"
        android:layout_width="102dp"
        android:layout_height="55dp"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.831" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:id="@+id/errorMessageSignup"
        android:text=""
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>