...
    <string name="title_activity_sign_up1">SignUpActivity1</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="EMPTY_EMAIL_ADDRESS">Empty Email Address</string>
    <string name="EMPTY_PASSWORD">Empty Password</string>
    <string name="INVALID_PASSWORD">Invalid Password</string>
    <string name="SAME_PASSWORD">Two Passwords should be the same!</string>
    <string name="INVALID_EMAIL_ADDRESS">Invalid email address</string>
    <string name="INCORRECT_PASSWORD">Password is incorrect.</string>
    <string name="NOT_REGISTERED_EMAIL">The Email Address is not registered.</string>
    <string name="EMPTY_EMAIL_OR_PASSWORD">Either Email Address or Password is empty.</string>
    <string name="EMPTY_STRING">""</string>
    <string name="EMPTY_PRODUCT_TYPE">"Product type is empty."</string>
    <string name="EMPTY_PRODUCT_NAME">"Product name is empty"</string>
...
    <string name="INVALID_PRODUCT_TYPE">"Product type is invalid"</string>
    <string name="INVALID_APPROXIMATE_MARKET_VALUE">"Approximate market value is not a numeric value"</string>
    <string name="INVALID_DATE_OF_AVAILABILITY">"Date of availability is not a valid date"</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="send">Send</string>
    <string name="EMPTY_RECEIVER_EXCHANGE_PRODUCT">"Item for exchange is empty"</string>
    <string name="EMPTY_RECEIVER_EST_ITEM_COST">"Estimated item cost(value) is empty"</string>
    <string name="INVALID_RECEIVER_EST_ITEM_COST">"Estimated item cost(value) is not a numeric value"</string>
    <string name="type_your_message">Type Your Message</string>
    <string name="EMPTY_VALUE_OR_ITEM">Estimated Value or item in exchange is empty</string>
    <string name="NOT_NUMERIC_VALUE">The value entered is not numeric</string>
    <string name="failed_to_send_message">Failed to send message</string>
    <string-array name="product_types">
...
