<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/receiverProductInExchange"
        android:layout_width="259dp"
        android:layout_height="83dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="76dp"
        android:ems="10"
        android:hint="Product in Exchange"
        android:inputType="text"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/receiverTransactionEstCost"
        android:layout_width="259dp"
        android:layout_height="83dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="76dp"
        android:ems="10"
        android:hint="Estimated Cost of product"
        android:inputType="number"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receiverProductInExchange" />

    <Button
        android:id="@+id/receiverTransactionConfirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="142dp"
        android:text="Confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/transactionReceiverErrorMessage"
        android:layout_width="271dp"
        android:layout_height="35dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receiverTransactionEstCost" />
</androidx.constraintlayout.widget.ConstraintLayout>